--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="work" id="work">
         <img src="images/creators/pezzo.JPG" alt="io">
-        <h1>Passion</h1><br><p>In 2019 i started making cables for my keyboards, people on socials liked it so much that ended up being my main hobby. In 2021 Khor became an established business and since then my goal has been to offer the best mechanical keyboard experience to all Italians and worldwide.</p>
+        <h1>Passion</h1><br><p>In 2019 i started making cables for my keyboards, in 2021 Khor became an established business and since then my goal has been to offer the best mechanical keyboard experience to all Italians and worldwide.</p>
 
     </div>
     <div class="gallery">
@@ -90,7 +90,43 @@
             <img class="creatorbio" src="images/creators/deidxraa.jpeg" alt="">
             <p class="creatorname"><a href="https://www.twitch.tv/deidxraa">Deidxraa</a></p>
         </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/wrkldr.png" alt="">
+            <p class="creatorname"><a href="https://worklouder.cc/">WorkLouder</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/cc.png" alt="">
+            <p class="creatorname"><a href="https://candykeys.com/">CandyKeys</a></p>
+        </span>
     </div>
+    <div class="creator-container">
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/kera.jpeg" alt="">
+            <p class="creatorname"><a href="https://www.instagram.com/kerasart.lab/">Kerasart</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/thai.jpeg" alt="">
+            <p class="creatorname"><a href="https://www.instagram.com/redpigthai/">RedPigThai</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/fede.jpeg" alt="">
+            <p class="creatorname"><a href="https://www.instagram.com/fedemito_/?hl=it">FedeMito</a></p>
+        </span>
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/dreight.jpeg" alt="">
+            <p class="creatorname"><a href="https://www.instagram.com/dreight_lab/?hl=it">Dreight</a></p>
+        </span>
+    </div>
+    <div class="creator-container">
+
+        <span class="creator">
+            <img class="creatorbio" src="images/creators/venny.png" alt="">
+            <p class="creatorname"><a href="https://www.instagram.com/kerasart.lab/">VennyTypes</a></p>
+        </span>
+  
+    </div>
+
+    <h2>And other 1000+ awesome customers around the world...</h2>
         <h2>Partners</h2>
         <div class="creator-container">
             <span class="creator">
@@ -105,6 +141,10 @@
                 <img class="creatorbio" src="images/creators/prophecy.png" alt="">
                 <p class="creatorname"><a href="https://www.youtube.com/c/prophecytechbynexthardware">ProphecyTech</a></p>
             </span>
+            <span class="creator">
+                <img class="creatorbio" src="images/creators/setup.png" alt="">
+                <p class="creatorname"><a href="https://setup-lab.it/">Setup-Lab</a></p>
+            </span>
         </div>
         <div class="creator-container">
             <span class="creator">
@@ -115,9 +155,13 @@
                 <img class="creatorbio" src="images/creators/pezzo.png" alt="">
                 <p class="creatorname"><a href="https://www.instagram.com/pezzodinerd_/">Pezzodinerd</a></p>
             </span>
+
         </div>
     </div>
     <div class="resources" id="links">
+        <div class="creator-container">
+            <a class="store" href="https://khor.store">Store</a>
+        </div>
         <div class="creator-container">
             <a class="discord" href="https://discord.gg/tbgVcxrhK5">Discord Community</a>
         </div>
